refactored MaintenanceDAO